Socket.io Evnets

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Chat App</title>
   </head>
   <body>
-    <h1>Welcome to realtime Node.js chat app</h1>
+    <h1>Real time Node.js chat app</h1>
+    <button id="increment">+1</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
   </body>
