--- a/public/index.html
+++ b/public/index.html
@@ -4,35 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="/css/styles.min.css" />
     <title>Chat App</title>
   </head>
   <body>
-    <h1>Real time Node.js Chat app</h1>
+    <div class="chat">
+      <div class="chat__sidebar">
+        <!-- Sidebar -->
+      </div>
 
-    <div id="messages"></div>
+      <div class="chat__main">
+        <div id="messages" class="chat__messages"></div>
 
-    <form id="message-form">
-      <input name="message" type="text" placeholder="Message" />
-      <button>Send</button>
-    </form>
+        <div class="compose">
+          <form autocomplete="off" id="message-form">
+            <input name="message" type="text" placeholder="Message" />
+            <button>Send</button>
+          </form>
+          <button id="send-location">Send location</button>
+        </div>
+      </div>
+    </div>
 
-    <button id="send-location">Send location</button>
-
+    <!-- Templates -->
     <script id="message-template" type="text/html">
-      <div>
-        <p>{{createdAt}} - {{message}}</p>
+      <div class="message">
+        <p>
+          <span class="message__name">Hussein Mohamed</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p>{{message}}</p>
       </div>
     </script>
 
     <script id="location-template" type="text/html">
-      <div>
+      <div class="message">
         <p>
-          {{createdAt}} -
+          <span class="message__name">Hussein Mohamed</span>
+          <span class="message__meta">{{createdAt}}</span>
+        </p>
+        <p>
           <a href="{{url}}" target="_blank">My current location</a>
         </p>
       </div>
     </script>
 
+    <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script>
