--- a/public/chat.html
+++ b/public/chat.html
@@ -18,8 +18,14 @@
         <div id="messages" class="chat__messages"></div>
 
         <div class="compose">
-          <form autocomplete="off" id="message-form">
-            <input name="message" type="text" placeholder="Message" />
+          <form id="message-form">
+            <input
+              name="message"
+              type="text"
+              placeholder="Message"
+              required
+              autocomplete="off"
+            />
             <button>Send</button>
           </form>
           <button id="send-location">Send location</button>
@@ -31,7 +37,7 @@
     <script id="message-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Hussein Mohamed</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>{{message}}</p>
@@ -41,7 +47,7 @@
     <script id="location-template" type="text/html">
       <div class="message">
         <p>
-          <span class="message__name">Hussein Mohamed</span>
+          <span class="message__name">{{username}}</span>
           <span class="message__meta">{{createdAt}}</span>
         </p>
         <p>
